--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -2,7 +2,7 @@
   display: flex;
   .admin-sidebar {
     .pro-sidebar {
-      height: 100vh;
+      height: 100%;
     }
 
     .pro-sidebar-layout {
