--- a/src/components/Admin/Content/Order/Order.scss
+++ b/src/components/Admin/Content/Order/Order.scss
@@ -22,5 +22,13 @@
         margin: 12px 0 24px 0;
       }
     }
+    .ant-table-cell.text-center {
+     text-align: center !important;
+     vertical-align: middle !important;
+    }
+     .ant-table-thead > tr > th {
+      text-align: center !important;  
+    }
+
   }
 }
