--- a/src/pages/HomePage/HomPage.scss
+++ b/src/pages/HomePage/HomPage.scss
@@ -5,15 +5,15 @@
   flex-direction: column;
 
   .homepage-wrapper {
-    .HomePageBannerTop {
-      background-image: url("../../assets/School.png");
-      width: 100%;
-      height: 390px;
-      background-size: cover;
-      background-repeat: no-repeat;
-      margin-bottom: 10px;
-      margin-top: 40px;
-    }
+    // .HomePageBannerTop {
+    //   background-image: url("../../assets/School.png");
+    //   width: 100%;
+    //   height: 390px;
+    //   background-size: cover;
+    //   background-repeat: no-repeat;
+    //   margin-bottom: 10px;
+    //   margin-top: 40px;
+    // }
   }
 
   .Btn-loadmore {
