--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  /* Ẩn spinner trên Chrome/Safari/Edge */
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Ẩn spinner trên Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
